# PDADI

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  app.py  pyproject.toml
backend/saved_model/: LR_thresh.json
frontend/: Dockerfile  index.html  nginx.conf  pnpm-lock.yaml
frontend/src/: App.css  App.tsx
frontend/src/components/form/: TransactionForm.tsx  module.css
frontend/src/services/: predictionService.ts
notebooks/: LR_thresh.json  RF-OPT_thresh.json  RF_thresh.json  XGB_thresh.json  best_LR_C.json  best_rf_hyperparams.json  credit.html  credit.ipynb
