[tool.poetry]
name = "credit-card-analysis" # o "credit-card"
version = "0.1.0"
description = "Analisi dati e addestramento modello per rilevamento frodi carte di credito."
authors = ["alevu3344 <alessandro.valmori2@studio.unibo.it>"]
readme = "README.md"
package-mode = false # Questa è la chiave per non installare il root package

[tool.poetry.dependencies]
python = ">=3.13" # Assicurati che la sintassi sia corretta per Poetry
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.6,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.6.1,<2.0.0"
imbalanced-learn = ">=0.13.0,<0.14.0"
xgboost = ">=3.0.2,<4.0.0"
lightgbm = ">=4.6.0,<5.0.0"
# joblib è spesso una dipendenza transitiva di scikit-learn, ma puoi aggiungerlo esplicitamente se vuoi
# joblib = "*" 

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.2"
ipykernel = "^6.29.5"
# jupyterlab = "^4.x.x" # Se preferisci jupyterlab

[build-system]
requires = ["poetry-core>=1.0.0"] # Usa una versione di poetry-core appropriata
build-backend = "poetry.core.masonry.api"